--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend для моего первого API на KOA",
+  "name": "frontend-KOA-API",
   "version": "1.0.0",
   "description": "frontend для API сервиса управления заявками. API (бэкенд часть) - https://github.com/Pavel-A-T/HelpDesk\r бейдж - [![Build status](https://ci.appveyor.com/api/projects/status/n55ek8qo1ua9w5ux/branch/master?svg=true)](https://ci.appveyor.com/project/Pavel-A-T/helpdesk-frontend/branch/master)",
   "main": "index.js",
